Adding most of README file