@@ -84,7 +84,7 @@
                 <configuration>
                     <source>20</source>
                     <target>20</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>20</release>
                 </configuration>
             </plugin>
         </plugins>
